UNRELEASED CHANGES:

* Add ability to stay in touch with a contact by sending reminders at a given interval
* Add secure Oauth route for the API login

RELEASED VERSIONS:

v2.0.1 - 2018-04-17
-------------------

* Add ability to set relationships through the API
* Fix ordering of activites in journal
* Fix how you meet section not being shown
* Add a changelog inside the application
* Fix monica:calculatestatistics command

v2.0.0 - 2018-04-12
-------------------

* Add ability to set a journal entry date
* Use UUID instead of actual ID to identify contacts
* Add ability to show/hide sections on the Contact sheet view
* Add many more relationship types to link contacts together
* Fix called_at field in the Call object returned by the API
* Add Linkedin URL in the Contact object returned by the API
* Improve localization: add plural forms, localize every needed messages
* Split app.js in 3 files, and load translations files for Vue in separate files
* Localize update tag message
* Fix some messages syntax and ponctuation
* Add a new monica:update command
* Fix gifts handle
* Remove old documentation from sources
* Fix Bug when editing gift

v1.8.2 - 2018-03-20
-------------------

* Add a Vagrantfile to run Monica on Vagrant
* Add support for Hebrew and Chinese Simplified
* Add bullet points to call lists when rendered from markdown
* Require debugbar on dev only
* Improve heroku integration
* Open register page after a clean installation
* API:  Add ability to sort tasks by completed_at attribute
* API: Add sorting capabilities to most models
* Update Czech, Italian, Portuguese, Russian, German, French language files
* Fix docker image creating wrong storage directories
* Fix notification messages

v1.8.1 - 2018-03-02
-------------------

* Fix message in contact edit page
* Fix months list for non english languages  in contact edit page
* Fix birthdate calendar for non english languages in contact edit page
* Fix Gravatar support