@@ -18,6 +18,7 @@ class Contact extends Resource
         return [
             'id' => $this->id,
             'object' => 'contact',
+            'hash_id' => $this->hashID(),
             'first_name' => $this->first_name,
             'last_name' => $this->last_name,
             'gender' => $this->gender->name,
